enable integration with AD for both ood and parallelcluster. Also add… (#17)
* enable integration with AD for both ood and parallelcluster. Also add example config files for pcluster

* fix missing ldap:// and CF subnet index problem

* remove fork repo reference checked in by mistake

* add script to generate pcluster config

* pcluster alread has slurmdbd.service file, delete the block that creates those

* sub hardcoded region to env variable

* remove S3FullAccess policy

--- a/cloudformation/openondemand.yml
+++ b/cloudformation/openondemand.yml
@@ -7,7 +7,7 @@ Metadata:
   AWS::CloudFormation::Interface:
     ParameterGroups:
       - Label:
-          default: Simple AD
+          default: Active Directory
         Parameters:
           - DomainName
           - TopLevelDomain
@@ -239,7 +239,7 @@ Resources:
     Type: AWS::EC2::Subnet
     Properties:
       AvailabilityZone: !Select
-        - 1
+        - 0
         - Fn::GetAZs: !Ref 'AWS::Region'
       CidrBlock: 10.0.0.0/26
       VpcId: !Ref VPC
@@ -252,7 +252,7 @@ Resources:
     Type: AWS::EC2::Subnet
     Properties:
       AvailabilityZone: !Select
-        - 2
+        - 1
         - Fn::GetAZs: !Ref 'AWS::Region'
       CidrBlock: 10.0.0.128/26
       VpcId: !Ref VPC
@@ -265,7 +265,7 @@ Resources:
     Type: AWS::EC2::Subnet
     Properties:
       AvailabilityZone: !Select
-        - 1
+        - 0
         - Fn::GetAZs: !Ref 'AWS::Region'
       CidrBlock: 10.0.2.0/24
       VpcId: !Ref VPC
@@ -293,7 +293,7 @@ Resources:
     Type: AWS::EC2::Subnet
     Properties:
       AvailabilityZone: !Select
-        - 2
+        - 1
         - Fn::GetAZs: !Ref 'AWS::Region'
       CidrBlock: 10.0.3.0/24
       VpcId: !Ref VPC
