--- a/cloudformation/openondemand.yml
+++ b/cloudformation/openondemand.yml
@@ -385,11 +385,11 @@ Resources:
               - !Sub arn:${AWS::Partition}:s3:::aws-windows-downloads-${AWS::Region}/*
               - !Sub arn:${AWS::Partition}:s3:::amazon-ssm-${AWS::Region}/*
               - !Sub arn:${AWS::Partition}:s3:::amazon-ssm-packages-${AWS::Region}/*
-              - !Sub arn:${AWS::Partition}:s3:::${AWS::Region}-birdwatcher-prod/*",
-              - !Sub arn:${AWS::Partition}:s3:::aws-ssm-document-attachments-${AWS::Region}/*",
-              - !Sub arn:${AWS::Partition}:s3:::patch-baseline-snapshot-${AWS::Region}/*",
-              - !Sub arn:${AWS::Partition}:s3:::aws-ssm-${AWS::Region}/*",
-              - !Sub arn:${AWS::Partition}:s3:::aws-patchmanager-macos-${AWS::Region}/*"
+              - !Sub arn:${AWS::Partition}:s3:::${AWS::Region}-birdwatcher-prod/*
+              - !Sub arn:${AWS::Partition}:s3:::aws-ssm-document-attachments-${AWS::Region}/*
+              - !Sub arn:${AWS::Partition}:s3:::patch-baseline-snapshot-${AWS::Region}/*
+              - !Sub arn:${AWS::Partition}:s3:::aws-ssm-${AWS::Region}/*
+              - !Sub arn:${AWS::Partition}:s3:::aws-patchmanager-macos-${AWS::Region}/*
 
   ALBSecurityGroup:
     Type: AWS::EC2::SecurityGroup
@@ -457,6 +457,11 @@ Resources:
           FromPort: 80
           ToPort: 80
           Description: Allow outbound 80 traffic to download packages
+        - CidrIp: 10.0.0.0/16
+          IpProtocol: tcp
+          FromPort: 22
+          ToPort: 22
+          Description: Allow outbound 22 traffic to Login Nodes
       Tags:
         - Key: Name
           Value: !Sub '${AWS::StackName} - SecurityGroup'
