* Adding multi-az example to parallelcluster sample configuration * Adding fix to configure_cluster_for_ood.sh to not error when no cluster configurations exist

--- a/cloudformation/openondemand.yml
+++ b/cloudformation/openondemand.yml
@@ -1485,6 +1485,9 @@ Outputs:
   PrivateSubnet1:
     Description: Private Subnet ID
     Value: !Ref PrivateSubnet1
+  PrivateSubnet2:
+    Description: Private Subnet ID
+    Value: !Ref PrivateSubnet2
   ClusterConfigBucket:
     Description: S3 Bucket where Cluster Configuration items are stored
     Value: !Ref ClusterConfigBucket
