--- a/assets/cloudformation/ood.yml
+++ b/assets/cloudformation/ood.yml
@@ -14,7 +14,6 @@ Metadata:
       - Label:
           default: Route53
         Parameters:
-          - HostedZoneName
           - HostedZoneId
       - Label:
           default: Networking
@@ -42,8 +41,6 @@ Metadata:
         default: Portal Allowed IP CIDR
       WebsiteDomainName:
         default: Website Domain Name
-      HostedZoneName:
-        default: Hosted Zone Name
       HostedZoneId:
         default: Hosted Zone Id
 Parameters:
@@ -62,13 +59,10 @@ Parameters:
   WebsiteDomainName:
     Description: Domain name for world facing website
     Type: String
-  HostedZoneName:
-    Description: Hosted zone for the domain
-    Type: String
-    AllowedPattern: '[A-Za-z\.]*\.$'
   HostedZoneId:
     Description: Hosted Zone Id for Route53 Domain
     Type: String
+    AllowedPattern: '[A-Za-z\.]*$'
   PortalAllowedIPCIDR:
     Description: IP CIDR for access to the Portal
     Default: 0.0.0.0/0
@@ -912,7 +906,7 @@ Resources:
   DNSRecord:
     Type: AWS::Route53::RecordSet
     Properties:
-      HostedZoneName: !Ref HostedZoneName
+      HostedZoneId: !Ref HostedZoneId
       Name: !Ref WebsiteDomainName
       AliasTarget:
         DNSName: !GetAtt ALB.DNSName
