Adding pre-commit configuration

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,8 +4,9 @@ repos:
   rev: v1.24.0  # Use the latest version
   hooks:
     - id: cfn-lint
-      files: assets/cloudformation/\.(yaml|yml|json|template)$
+      files: \.(yaml|yml|json|template)$
       # Optionally add specific arguments
+      exclude: ^(.pre-commit-config.yaml)$
       args: [--ignore-checks, W3002]
 
 - repo: local
@@ -15,4 +16,5 @@ repos:
       description:  Looks for patterns in CloudFormation templates that may indicate insecure infrastructure.
       entry: cfn_nag_scan --input-path
       language: ruby
-      files: assets/cloudformation/\.(yaml|yml|json|template)$
+      exclude: ^(.pre-commit-config.yaml)$
+      files: \.(yaml|yml|json|template)$
