--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,7 +7,7 @@ repos:
       files: assets/cloudformation/.*\.(yaml|yml|json|template)$
       # Optionally add specific arguments
       exclude: ^(.pre-commit-config.yaml)$
-      args: [--ignore-checks, W3002, --debug]
+      args: [--ignore-checks, W3002]
 
 - repo: local
   hooks:
