Adding shellcheck for scripts

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,3 +17,9 @@ repos:
       language: ruby
       exclude: ^(.pre-commit-config.yaml)$
       files: assets/cloudformation/.*\.(yaml|yml|json|template)$
+
+-   repo: https://github.com/shellcheck-py/shellcheck-py
+    rev: v0.10.0.1
+    hooks:
+    -   id: shellcheck
+        files: scripts/.*\.(sh)$
