--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,3 +23,6 @@ repos:
     hooks:
     -   id: shellcheck
         files: scripts/.*\.(sh)$
+        args:
+          - --exclude=SC2086,SC2046,SC2155
+          - --severity=error
